--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"JavaScript"
 	],
 	"license": "ISC",
-	"author": "",
+	"author": "41_Watchara",
 	"type": "module",
 	"main": "main.js",
 	"scripts": {
